# mottle

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
scripts/windows/: clone.bat  clone.conf  debug.bat  rdoc.bat  rdoc.cap  shell.bat
src/: main.cpp
